syntax = "proto3";

option csharp_namespace = "Users.Service";

package Services;

import "google/protobuf/empty.proto";

service UserExperienceService {
    rpc GetAllUserExperiences (UserExperienceFilterList) returns (stream UserExperience);
    rpc GetUserExperienceByUserId (UserExperienceRequest) returns (UserExperience);
    rpc CreateUserExperience (UserExperience) returns (UserExperience);
    rpc UpdateUserExperience (UserExperience) returns (UserExperience);
    rpc DeleteUserExperience (UserExperienceRequest) returns (google.protobuf.Empty);
}

message UserExperience {
    int64 id = 1;
    int64 user_id = 2;
    int64 score = 3;
    int32 level = 4;
    repeated int32 todos = 5;
}

message UserExperienceFilterList {
    repeated UserExperienceFilter filters = 1;
}

message UserExperienceFilter {
    string key = 1;
    string value = 2;
}

message UserExperienceRequest {
    int64 id = 1;
}
